# SNUB

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  gui.rst  index.rst  install.rst  nwb.rst  setup.rst  tutorials.rst  usage.rst
docs/source/_static/css/: custom.css
snub/: __init__.py  __main__.py
snub/gui/: __init__.py  help.py  main.py  panels.py  stacks.py  tracks.py  utils.py  video.py
snub/gui/help/: __init__.py  annotator.md  heatmaps.md  help_menu.py  layout.md  loading_data.md  scatter_plots.md  selections.md  timeline.md  trace_plots.md  video.md
snub/gui/panels/: __init__.py  base.py  mesh.py  pose3D.py  roi.py  scatter.py  video.py
snub/gui/stacks/: __init__.py  base.py  panel.py  track.py
snub/gui/tracks/: __init__.py  annotator.py  base.py  heatmap.py  raster.py  spike.py  trace.py
snub/gui/utils/: __init__.py  interval.py  widgets.py
snub/io/: __init__.py  manifold.py  nwb.py  plot.py  project.py  video.py
snub/io/nwb/: __init__.py  convert.py  nwb_tree.py
tests/: test_gui.py  test_io.py  test_nwb.py
tests/data/: umap_coordinates.npy
tests/project/: IR_camera.timestamps.npy  behavior annotations.heatmap_data.npy  behavior annotations.heatmap_intervals.npy  behavior annotations.heatmap_labels.txt  config.json  umap embedding.scatter_data.npy
