[metadata]
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/calebweinreb/SNUB
description = Systems Neuro Browser
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    PyQt5
    numpy
    scikit-learn
    tqdm
    cmapy
    interlap
    numba
    vispy
    imageio
    imageio-ffmpeg
    umap-learn
    rastermap==0.1.3
    ipykernel
    pyqtgraph
    networkx
    opencv-python-headless==4.1.2.30
    vidio>=0.0.3
    pytest
    pytest-qt
    pynwb
    ndx-pose
    ndx-photometry
    ndx-depth-moseq
    pandas
    dandi

[options.package_data]
snub.gui = icons/*
* = *.md

[options.entry_points]
console_scripts =
    snub = snub.gui.main:run

[versioneer]
VCS = git
style = pep440
versionfile_source = snub/_version.py
versionfile_build = snub/_version.py
tag_prefix =
parentdir_prefix = 